feat: Adicionado entidade conexão
