# src/routes/index.js
@@ -1,11 +1,13 @@
 const usuario = require("./usuario");
 const preferencia = require("./preferencia");
+const conexao = require("./conexao");
 
 const url = "/api/v1/public";
 module.exports = (app) => {
   app.use(
     url,
     usuario,
-    preferencia
+    preferencia,
+    conexao
   );
 };
